# rok4

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  COPYING  DEPENDENCIES  LICENCE  Makefile  README  README.md  pom.xml  rok4version.h.in
be4/: CMakeLists.txt  Makefile  README.md  be4version.h.in  how_to_fr.txt
be4/DallesBase/: CDalle.cpp  CDalle.h  CMakeLists.txt  DallesBase.cpp  Makefile  config.h  dalles_base  fichiertest.txt  readme.txt
be4/DallesBase/test/: fichiertest-9rgb.txt  fichiertest.txt
be4/cache2work/: CMakeLists.txt  LICENCE  README  cache2work.cpp
be4/checkImage/: CMakeLists.txt  README  checkImage.cpp
be4/checkWork/: checkWork.cpp
be4/composeNtiff/: CMakeLists.txt  composeNtiff.cpp
be4/createNodata/: CMakeLists.txt  README  createNodata.cpp
be4/decimateNtiff/: CMakeLists.txt  decimateNtiff.cpp
be4/doc/: Doxyfile.en.in  Doxyfile.fr.in  MenuND.txt
be4/manageNodata/: CMakeLists.txt  README  manageNodata.cpp
be4/merge4tiff/: CMakeLists.txt  Makefile  README  merge4tiff  merge4tiff.cpp
be4/mergeNtiff/: CMakeLists.txt  Makefile  README  mergeNtiff.cpp  readme.txt
be4/nodataIdentifier/: CMakeLists.txt  README  nodataIdentifier.cpp
be4/nogeotiff/: nogeotiff.cpp
be4/overlayNtiff/: CMakeLists.txt  README  overlayNtiff.cpp
be4/overlayNtiff/doc/: Doxyfile.in
be4/pyramide/: 4096_4096_FFFFFF_gray_png.tif  CHANGES  CMakeLists.txt  FIXME  INSTALL  Makefile  Makefile.PL  Makefile.PL.in  QUESTIONS  README  cache.pm  calcule_pyramide.pl  cree_dallage_base.pl  dependances_scripts_perl.txt  how_to_fr.txt  initialise_pyramide.pl  maj_cache.pl  maj_conf_serveur.pl  makefile  parametres_cache.xml  parametres_cache.xsd  passe_2pivot.pl  prepare_pyramide.pl  pyramide_lecture_seule.pl  remplacelib.sh  rollback.pl  tiffcpbe4  verify-dependencies.pl
be4/pyramide/conf/: be4.properties  params.properties
be4/pyramide/lib/: BE4.txt  JOINCACHE.txt  WMTSalaD_classes.xml
be4/removeFF/: CMakeLists.txt  README  removeFF.cpp
be4/removeWhite/: CMakeLists.txt  README  removeWhite.cpp
be4/reprojectTiff/: CMakeLists.txt  reprojectTiff.cpp
be4/slab2tiles/: CMakeLists.txt  README  slab2tiles.cpp
be4/tests/perlunit/: PerlUnitCommands.t  PerlUnitDataSourceLoader.t  PerlUnitForest.t  PerlUnitGraph.t  PerlUnitHarvesting.t  PerlUnitNode.t  PerlUnitPixel.t  PerlUnitPyrImageSpec.t  PerlUnitQTree.t  PerlUnitScript.t
be4/tests/sources/: sources.txt  sources_Graph.txt
be4/tests/tms/: LAMB93_1M_MNT.tms
be4/tiff2gray/: CMakeLists.txt  Makefile  README  tiff2gray.cpp
be4/tiff2tile/: CMakeLists.txt  Makefile  README  TiffReader.cpp  TiffReader.h  TiledTiffWriter.cpp  TiledTiffWriter.h  tiff2tile  tiff2tile.cpp
be4/tiffck/: CMakeLists.txt  tiffck.cpp
be4/untile/: CMakeLists.txt  untile.cpp
be4/work2cache/: CMakeLists.txt  README  README.md  work2cache.cpp
cmake/template/: CMakeLists.txt  README  libprojet.cpp  libprojet.h  projet.cpp
cmake/template/doc/: Doxyfile.en.in  Doxyfile.fr.in
cmake/template/perl/: ClassName.pm  command.pl.in
cmake/template/po/: CMakeLists.txt  Makevars  POTFILES.in  Template.pot  en.po  fr.po
lib/libCurl/: CMakeLists.txt
lib/libcppunit/: CMakeLists.txt  Makefile
lib/libfcgi/: CMakeLists.txt  Makefile  fastcgi.h  fcgiapp.c  fcgiapp.h  fcgimisc.h  fcgios.h  os_unix.c
lib/libimage/: AliasManager.h  AscEncoder.cpp  AscEncoder.h  Aspect.h  AspectImage.cpp  AspectImage.h  BilEncoder.cpp  BilEncoder.h  BilzImage.cpp  BilzImage.h  BoundingBox.h  CMakeLists.txt  CRS.cpp  CRS.h  CephContext.cpp  CephContext.h  CephDataSource.cpp  CephDataSource.h  CephPoolContext.cpp  CephPoolContext.h  Ceph_library_config.h.in  ColorizePNGEncoder.cpp  ColorizePNGEncoder.h  CompoundImage.cpp  CompoundImage.h  Context.cpp  Context.h  ContextBook.cpp  ContextBook.h  ConvertedChannelsImage.cpp  ConvertedChannelsImage.h  CurlPool.cpp  CurlPool.h  Data.cpp  Data.h  DecimatedImage.cpp  DecimatedImage.h  Decoder.cpp  Decoder.h  EmptyDataSource.cpp  (+117 more)
lib/libimage/doc/: Doxyfile.en.in  (+1 more)
lib/libjpeg/: CMakeLists.txt  Makefile  libjpeg-turbo_1.0.0_amd64.deb  libjpeg-turbo_1.0.0_i386.deb
lib/liblogger/: Accumulator.cpp  Accumulator.h  CMakeLists.txt  Logger.cpp  Logger.h  LoggerSpecific.cpp  LoggerSpecific.h  Makefile  README
lib/libopenjpeg/: CMakeCache.txt  CMakeLists.txt  cio.h  dwt.c  indexbox_manager.h  mqc.c  openjpeg.c  openjpeg.h  opj_clock.c  opj_includes.h  opj_intmath.h  opj_inttypes.h  opj_malloc.h  opj_stdint.h  t1.c
lib/libproj/: CMakeLists.txt  Makefile
lib/libtiff/: CMakeLists.txt  Makefile
lib/libxerces/: CMakeLists.txt  Makefile
rok4/: BilEncoder.cpp  BilEncoder.h  CMakeLists.txt  CRS.cpp  CRS.h  CapabilitiesBuilder.cpp  ConfLoader.cpp  ConfLoader.h  Data.h  DocumentXML.h  Error.h  FileDataSource.cpp  FileDataSource.h  GetFeatureInfoEncoder.cpp  HttpResponse.h  JPEGEncoder.cpp  JPEGEncoder.h  Keyword.cpp  Keyword.h  Layer.cpp  Layer.h  LayerXML.cpp  LayerXML.h  LegendURL.cpp  LegendURL.h  Level.cpp  Level.h  LevelXML.cpp  LevelXML.h  Makefile  Message.cpp  Message.h  MetadataURL.cpp  MetadataURL.h  PNGEncoder.cpp  PNGEncoder.h  ProcessFactory.cpp  ProcessFactory.h  Pyramid.cpp  Pyramid.h  (+53 more)
rok4/po/: LINGUAS  POTFILES.in  Rok4Server.pot  en.po  fr.po
rok4generation/: CMakeLists.txt  README.md
rok4generation/main/: CMakeLists.txt  Makefile.PL.in  makefile  verify-dependencies.pl
rok4generation/tools/: tests.sh  valgrind.all
rok4server/: Attribute.h  CMakeLists.txt  ConfLoader.cpp  ConfLoader.h  DocumentXML.h  GetFeatureInfoEncoder.cpp  GetFeatureInfoEncoder.h  Keyword.cpp  Keyword.h  Layer.cpp  Layer.h  LayerXML.cpp  LayerXML.h  LegendURL.cpp  LegendURL.h  Level.cpp  Level.h  LevelXML.cpp  LevelXML.h  Message.cpp  Message.h  MetadataURL.cpp  MetadataURL.h  ProcessFactory.cpp  ProcessFactory.h  Pyramid.cpp  Pyramid.h  PyramidXML.cpp  PyramidXML.h  README.md  Request.cpp  Request.h  ResourceLocator.cpp  ResourceLocator.h  ResponseSender.cpp  ResponseSender.h  Rok4Api.cpp  Rok4Api.h  Rok4Server.cpp  Rok4Server.h  (+30 more)
rok4server/doc/: Doxyfile.en.in  Doxyfile.fr.in
rok4server/po/: Makevars  Rok4Server.pot  en.po  fr.po
(+1874 files in other folders)
